# Learning-CMake

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  config.sh  installAndRun.sh  main.cpp  run.sh
Adder/: CMakeLists.txt  adder.cpp
MakeAPerson/: CMakeLists.txt
MakeAPerson/inc/: Person.h
MakeAPerson/src/: CMakeLists.txt  Person.cpp  main.cpp
SomeLib/: CMakeLists.txt  adder.h
TestSome/: CMakeLists.txt  main.cpp
